--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .App {
   text-align: center;
   background-image: url("/public/images/bg.png");
