modify footer, remove winners, style changes

--- a/src/App.css
+++ b/src/App.css
@@ -113,6 +113,10 @@
   color: #595757 !important;
 }
 
+.bg-cl-orange {
+  background-color: #dd5a27 !important;
+}
+
 footer {
   background-color: #dd5a27;
   color: #fff;
