added fb, added login model ui

--- a/src/App.css
+++ b/src/App.css
@@ -148,3 +148,25 @@ footer button {
 .dotted-line {
   width: 50%;
 }
+
+.separator {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #595757;
+}
+
+.separator::before,
+.separator::after {
+  content: "";
+  flex: 1;
+  border-bottom: 1px solid #595757;
+}
+
+.separator:not(:empty)::before {
+  margin-right: 0.25em;
+}
+
+.separator:not(:empty)::after {
+  margin-left: 0.25em;
+}
